pods_yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx  # 需提前部署Nginx Ingress Controller
  rules:
  - host: "mission-django.example.com"  # 替换为实际域名
    http:
      paths:
      - path: /user-gateway
        pathType: Prefix
        backend:
          service:
            name: user-gateway-service
            port:
              number: 80
      - path: /admin-service
        pathType: Prefix
        backend:
          service:
            name: admin-service-service
            port:
              number: 80
